--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -58,7 +58,7 @@
 
     {% if slideSettings.headline | trim is not empty and slideSettings.headlineStyle == "custom-caption" %}
 
-        {{ Twig.set("slide", "slide | merge({ name: '#{ (slideSettings.headline) }' })") }}
+        {{ Twig.set("slide", "slide | merge({ name: #{ (slideSettings.headline | json_encode) } })") }}
 
     {% endif %}
 
