--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -119,7 +119,7 @@ $blue:                      #008ebd !default;
 $indigo:                    #6610f2 !default;
 $purple:                    #6f42c1 !default;
 $pink:                      #e83e8c !default;
-$red:                       #dc3545 !default;
+$red:                       #d4021d !default;
 $orange:                    #fd7e14 !default;
 $yellow:                    #ffc107 !default;
 $green:                     #28a745 !default;
@@ -19998,7 +19998,8 @@ html.ie {
                 flex: 1;
 
         // widget-inner inside grid should not display paddings
-        .widget .widget-inner {
+        .widget-newsletter .widget-inner,
+        .widget-item-list .widget-inner {
             padding-left: 0;
             padding-right: 0;
         }
