--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -32,7 +32,7 @@ $blue:                      #008ebd !default;
 $indigo:                    #6610f2 !default;
 $purple:                    #6f42c1 !default;
 $pink:                      #e83e8c !default;
-$red:                       #dc3545 !default;
+$red:                       #d4021d !default;
 $orange:                    #fd7e14 !default;
 $yellow:                    #ffc107 !default;
 $green:                     #28a745 !default;
