CHANGE ItemListWidget - the item.data array will now be passed properly into the layout container

--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -85,8 +85,12 @@
                             <category-item
                                 :item-data="{{ Twig.print("item.data | json_encode") }}"
                                 :decimal-count="{{ Twig.print("ceresConfig.item.storeSpecial") }}">
-                                <template slot="BeforePrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.BeforePrices", "item.data"])) }}</template>
-                                <template slot="AfterPrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.AfterPrices", "item.data"])) }}</template>
+                                <template slot="BeforePrices">
+                                    {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.BeforePrices", Twig.var("item.data")])) }}
+                                </template>
+                                <template slot="AfterPrices">
+                                    {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.AfterPrices", Twig.var("item.data")])) }}
+                                </template>
                             </category-item>
                         </template>
                     {{ Twig.endfor() }}
