--- a/resources/views/Widgets/Grid/FourColumnWidget.twig
+++ b/resources/views/Widgets/Grid/FourColumnWidget.twig
@@ -1,6 +1,17 @@
 <div class="widget widget-grid widget-grid-1-1-1-1">
-    <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
-    <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
-    <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
-    <div class="widget-inner" data-builder-child-container="fourth">{{ children.fourth | raw }}</div>
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="first"{% endif %}>{{ children.first | raw }}</div>
+    </div>
+
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="second"{% emdif %}>{{ children.second | raw }}</div>
+    </div>
+
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="third"{% emdif %}>{{ children.third | raw }}</div>
+    </div>
+
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="fourth"{% emdif %}>{{ children.fourth | raw }}</div>
+    </div>
 </div>
