--- a/resources/scss/ceres/widgets/Helper/_base-widget.scss
+++ b/resources/scss/ceres/widgets/Helper/_base-widget.scss
@@ -19,6 +19,11 @@
     {
         margin-bottom: 1rem;
 
+        &.widget-grid
+        {
+            margin-bottom: 0;
+        }
+
         .widget-inner
         {
             .widget
@@ -85,7 +90,7 @@
         .widget-inner-stacked .widget-proportional
         {
             padding-bottom: 0;
-            height: 100%;
+            min-height: 100%;
 
             > .widget-inner .widget-caption
             {
