--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -16,24 +16,39 @@
     {% if layout == "oneStackedToTwo" %}
 
         <div class="widget-inner widget-inner-stacked">
-            <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
-            <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
+            <div class="widget-inner">
+                <div{% if isPreview %} data-builder-child-container="first"{% endif %}>{{ children.first | raw }}</div>
+            </div>
+
+            <div class="widget-inner">
+                <div{% if isPreview %} data-builder-child-container="second"{% endif %}>{{ children.second | raw }}</div>
+            </div>
         </div>
-        <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
+        <div class="widget-inner">
+            <div{% if isPreview %} data-builder-child-container="third"{% endif %}>{{ children.third | raw }}</div>
+        </div>
 
     {% elseif layout == "twoToOneStacked" %}
 
-        <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
+        <div class="widget-inner">
+            <div{% if isPreview %} data-builder-child-container="first"{% endif %}>{{ children.first | raw }}</div>
+        </div>
+
         <div class="widget-inner widget-inner-stacked">
-            <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
-            <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
+            <div class="widget-inner">
+                <div{% if isPreview %} data-builder-child-container="second"{% endif %}>{{ children.second | raw }}</div>
+            </div>
+
+            <div class="widget-inner">
+                <div{% if isPreview %} data-builder-child-container="third"{% endif %}>{{ children.third | raw }}</div>
+            </div>
         </div>
 
     {% else %}
 
-        <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
-        <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
-        <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
+        <div class="widget-inner"><div{% if isPreview %} data-builder-child-container="first"{% endif %}>{{ children.first | raw }}</div></div>
+        <div class="widget-inner"><div{% if isPreview %} data-builder-child-container="second"{% endif %}>{{ children.second | raw }}</div></div>
+        <div class="widget-inner"><div{% if isPreview %} data-builder-child-container="third"{% endif %}>{{ children.third | raw }}</div></div>
 
     {% endif %}
 </div>
