--- a/resources/views/Widgets/Grid/TwoColumnWidget.twig
+++ b/resources/views/Widgets/Grid/TwoColumnWidget.twig
@@ -1,6 +1,10 @@
 {% set layout = widget.settings.layout.mobile %}
 
 <div class="widget widget-grid widget-grid-{% if layout == "oneToOne" %}1-1{% elseif layout == "twoToOne" %}2-1{% else %}1-2{% endif %}">
-    <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
-    <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="first"{% endif %}>{{ children.first | raw }}</div>
+    </div>
+    <div class="widget-inner">
+        <div{% if isPreview %} data-builder-child-container="second"{% endif %}>{{ children.second | raw }}</div>
+    </div>
 </div>
