--- a/resources/views/Widgets/Grid/FourColumnWidget.twig
+++ b/resources/views/Widgets/Grid/FourColumnWidget.twig
@@ -4,14 +4,14 @@
     </div>
 
     <div class="widget-inner">
-        <div{% if isPreview %} data-builder-child-container="second"{% emdif %}>{{ children.second | raw }}</div>
+        <div{% if isPreview %} data-builder-child-container="second"{% endif %}>{{ children.second | raw }}</div>
     </div>
 
     <div class="widget-inner">
-        <div{% if isPreview %} data-builder-child-container="third"{% emdif %}>{{ children.third | raw }}</div>
+        <div{% if isPreview %} data-builder-child-container="third"{% endif %}>{{ children.third | raw }}</div>
     </div>
 
     <div class="widget-inner">
-        <div{% if isPreview %} data-builder-child-container="fourth"{% emdif %}>{{ children.fourth | raw }}</div>
+        <div{% if isPreview %} data-builder-child-container="fourth"{% endif %}>{{ children.fourth | raw }}</div>
     </div>
 </div>
