ADD _reboot.scss - adds additional compatibility after bootstrap's reboot

--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -19,6 +19,7 @@
 @import "ceres/common/common";
 @import "ceres/common/structure";
 @import "ceres/common/modal";
+@import "ceres/common/reboot";
 
 //TODO's
 @import "ceres/common/buttons";
