--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -19972,37 +19972,11 @@ html.ie {
 }
 .widget-grid
 {
-    margin-left: -15px;
-    margin-right: -15px;
-
-    @include media-breakpoint-up(md)
-    {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-    }
-
-    .widget-inner
-    {
-        padding-left: 15px;
-        padding-right: 15px;
-        -webkit-box-flex: 1;
-            -ms-flex: 1;
-                flex: 1;
-
-        // widget-inner inside grid should not display paddings
-        .widget-inner {
-            padding-left: 0;
-            padding-right: 0;
-        }
-    }
-
     > .widget-inner
     {
         > div
         {
             height: 100%;
-            width: 100%;
         }
     }
 
@@ -20043,18 +20017,6 @@ html.ie {
         {
             padding-bottom: 2rem;
         }
-    }
-
-    &.widget-grid-1-2 .widget-inner:last-child,
-    &.widget-grid-2-1 .widget-inner:first-child,
-    &.widget-grid-1-1-2 .widget-inner:last-child,
-    &.widget-grid-1-2-1 .widget-inner:nth-child(2),
-    &.widget-grid-2-1-1 .widget-inner:first-child,
-    &.widget-grid-stacked .widget-inner:not(.widget-inner-stacked)
-    {
-        -webkit-box-flex: 2;
-            -ms-flex: 2 1 auto;
-                flex: 2 1 auto;
     }
 }
 
@@ -20156,7 +20118,7 @@ html.ie {
 .widget-proportional
 {
     position: relative;
-    padding-bottom: 33.33333%;
+    padding-bottom: percentage(1/3);
     overflow: hidden;
     
     .widget-inner
@@ -20171,54 +20133,26 @@ html.ie {
 
 @include media-breakpoint-up(md)
 {
-    .widget-grid-1-2 > .widget-inner:first-child .widget-proportional,
-    .widget-grid-2-1 > .widget-inner:last-child .widget-proportional,
-    .widget-grid-2-1-1 > .widget-inner .widget-proportional,
-    .widget-grid-1-2-1 > .widget-inner .widget-proportional,
-    .widget-grid-1-1-2 > .widget-inner .widget-proportional
+    @each $i in 1,2,3,4
     {
-        padding-bottom: 100%;
-    }
-
-    .widget-grid-1-1-1 > .widget-inner .widget-proportional
-    {
-        padding-bottom: 66.6666%;
-    }
-    
-    .widget-grid-1-1-1-1 > .widget-inner .widget.widget-proportional
-    {
-        padding-bottom: 100%;
-    }
-
-    .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
-    .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
-    .widget-grid-2-1-1 > .widget-inner:first-child .widget-proportional,
-    .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-proportional,
-    .widget-grid-1-1-2 > .widget-inner:last-child .widget-proportional
-    {
-        padding-bottom: 50%;
-    }
-
-    .widget-grid-stacked
-    {
-        .widget-inner .widget-proportional
+        @each $j in 1,2,3,4
         {
-            padding-bottom: 66%;
-        }
-
-        .widget-inner-stacked .widget-proportional
-        {
-            padding-bottom: 0;
-            min-height: 100%;
-
-            > .widget-inner .widget-caption
+            .widget-prop-#{$i}-#{$j} .widget-proportional
             {
-                h2, .h2
-                {
-                    font-size: 1.75rem;
-                }
+                padding-bottom: percentage($j / $i);
+            }
+
+            .widget-proportional.widget-prop-#{$i}-#{$j}
+            {
+                padding-bottom: percentage($j / $i) !important;
             }
         }
+
+    }
+    .widget-prop-auto .widget-proportional
+    {
+        padding-bottom: 0;
+        min-height: 100%;
     }
 }
 
