Refactor css class name

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -14,7 +14,7 @@
                     <slot name="ImageCarousel"></slot>
                 </div>
 
-                <div class="col-md-5 single-leftside">
+                <div class="col-md-5 single-rightside">
                     {% include "Ceres::Item.Components.SingleItem.SingleItem_Details" %}
                 </div>
 
