--- a/resources/scss/ceres/views/Item/_single-item.scss
+++ b/resources/scss/ceres/views/Item/_single-item.scss
@@ -248,14 +248,14 @@
     }
 }
 
-.single-leftside
+.single-rightside
 {
     margin-top: 1rem;
 }
 
 @include media-breakpoint-up(md)
 {
-    .single-leftside
+    .single-rightside
     {
         margin-top: 0;
         position: absolute;
