--- a/resources/views/Customer/Components/ResetPasswordForm.twig
+++ b/resources/views/Customer/Components/ResetPasswordForm.twig
@@ -1,11 +1,13 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 <script type="x/template" id="vue-reset-password-form">
-    <div class="row mb-5">
-        <form :id="'reset-password-form-' + _uid" class="mb-3">
-            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                <span class="error-save-pwd-msg">{{ trans("Ceres::Template.resetPwCheckPassword") }}</span>
-                <div class="input-unit" data-validate="password">
+    <div class="row">
+        <div class="col-12">
+            <slot></slot>
+        </div>
+        <form class="col-12" ref="resetPasswordForm">
+            <div class="input-feedback-container" data-validate="password">
+                <div class="input-unit">
                     <popper v-cloak trigger="focus" placement="right" ref="passwordHint">
                         <input slot="handle" type="password" name="password" id="txt_password_first" v-model="passwordFirst">
                         <div slot="title">
@@ -17,26 +19,25 @@
                             <li>{{ trans("Ceres::Template.resetPwPasswordHintChar") }}</li>
                         </ul>
                     </popper>
-                    
+
                     <label for="txt_password_first">{{ trans("Ceres::Template.resetPwNewPassword") }}*</label>
                 </div>
-                <span class="error-msg">{{ trans("Ceres::Template.resetPwInvalidPassword") }}</span>
+
+                <span class="feedback feedback-error">{{ trans("Ceres::Template.resetPwInvalidPassword") }}</span>
             </div>
 
-            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                <div class="input-unit" data-validate="text">
-                    <input type="password" name="password" id="txt_password_second" v-model="passwordSecond">
+            <div class="input-feedback-container" data-validate="ref">
+                <div class="input-unit">
+                    <input type="password" name="password" id="txt_password_second" v-model="passwordSecond" data-validate-ref="#txt_password_first">
                     <label for="txt_password_second">{{ trans("Ceres::Template.resetPwRepeatPassword") }}*</label>
                 </div>
-                <span class="error-msg">{{ trans("Ceres::Template.resetPwRepeatNewPassword") }}</span>
+                <span class="feedback feedback-error">{{ trans("Ceres::Template.resetPwRepeatNewPassword") }}</span>
             </div>
-        </form>
 
-        <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 text-sm-right">
-            <button @click="validatePassword" class="btn btn-primary save-new-pwd-btn" :disabled="isDisabled">
+            <button @click.prevent="validatePassword" class="btn btn-primary btn-large float-right" :disabled="isDisabled">
+                <span>{{ trans("Ceres::Template.resetPwSave") }}</span>
                 <i class="fa fa-floppy-o" aria-hidden="true"></i>
-                {{ trans("Ceres::Template.resetPwSave") }}
             </button>
-        </div>
+        </form>
     </div>
 </script>
