--- a/resources/views/Customer/ResetPassword.twig
+++ b/resources/views/Customer/ResetPassword.twig
@@ -10,11 +10,16 @@
 
     <div class="container-max reset-pwd mb-5 mt-3">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mb-4">
-                <h1 class="h2">{{ trans("Ceres::Template.resetPwResetPassword") }}</h1>
+            <div class="col-12 col-sm-10 offset-sm-1 col-lg-6 offset-lg-3">
+
+                <reset-password-form template="#vue-reset-password-form"
+                                     :contact-id="{{ contactId }}"
+                                     hash="{{ hash }}">
+
+                        <h1 class="h2 mb-4">{{ trans("Ceres::Template.resetPwResetPassword") }}</h1>
+                </reset-password-form>
+
             </div>
         </div>
-
-        <reset-password-form template="#vue-reset-password-form" :contact-id="{{ contactId }}" hash="{{ hash }}"></reset-password-form>
     </div>
 {% endblock %}
