FIX spacing of multiple grids

--- a/resources/scss/ceres/widgets/Helper/_base-widget.scss
+++ b/resources/scss/ceres/widgets/Helper/_base-widget.scss
@@ -22,6 +22,11 @@
         &.widget-grid
         {
             margin-bottom: 0;
+
+            + .widget-grid
+            {
+                margin-top: 1rem;
+            }
         }
 
         .widget-inner
