--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -290,6 +290,8 @@ $custom-file-border-color:                      #ddd !default;
 $custom-file-box-shadow:                        inset 0 .2rem .4rem rgba(0,0,0,.05) !default;
 $custom-file-button-bg:                         #eee !default;
 
+$form-check-input-margin-y:                     .1rem;
+
 // This allows us to at a glance determine relative layers of our application and prevents bugs
 // arrising from arbitrary z-index values. Do not edit the z-index scale! Only add application
 // scoped z-index values.
